# haytime

./: .gitignore  Cargo.toml  README.md  hayashi.toml
.github/workflows/: release.yml
examples/: arithmetic.hay  basic.hay  periods.hay
src/: lib.rs
