[package]
name = "haytime"
version = "0.1.1"
edition = "2021"
description = "Date and time manipulation plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/haytime"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
